Initial implementation of rollup_createBlock endpoint
Signed-off-by: Pedro Novais <jpvnovais@gmail.com>